# binance-futures-python

./: CHANGELOG.md  README.md  pyproject.toml  setup.cfg
binance_futures_python/: __init__.py  client.py
tests/: __init__.py  test_algo_orders.py
