[metadata]
name = binance-futures-python
version = 0.2.0
description = REST client for Binance USDⓈ-M Futures with automatic signing and environment toggling.
long_description = file: README.md
long_description_content_type = text/markdown
author = Codex
author_email = codex@example.com
license = MIT
keywords = binance, futures, trading, api, usdt-m
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: MIT License
    Intended Audience :: Developers
    Topic :: Office/Business :: Financial :: Investment
    Topic :: Software Development :: Libraries :: Python Modules

[options]
packages = find:
install_requires =
    requests>=2.31.0
python_requires = >=3.9
include_package_data = True

[options.packages.find]
where = .
include =
    binance_futures_python
    binance_futures_python.*
